documentation(EJ2-71942): Fixed toc issues

--- a/code-snippet/tooltip/es5-getting-started-cs1/js/index.html
+++ b/code-snippet/tooltip/es5-getting-started-cs1/js/index.html
@@ -1,9 +1,31 @@
-<html><head><script src="https://cdn.syncfusion.com/ej2/20.4.38/dist/ej2.min.js" type="text/javascript"></script>
-</head><body><script>
-var ele = document.getElementById('container');
-if(ele) {
-  ele.style.visibility = "visible";
-}   
-      </script>
-<script src="index.js" type="text/javascript"></script>
-</body></html>
+
+<!DOCTYPE html>
+  <html xmlns="http://www.w3.org/1999/xhtml">
+   <head>
+                
+        <title>Essential JS 2</title>
+        <!-- Essential JS 2 material theme -->
+        <link href="https://cdn.syncfusion.com/ej2/21.2.3/ej2-base/styles/material.css" rel="stylesheet" type="text/css"/>
+        <link href="https://cdn.syncfusion.com/ej2/21.2.3/ej2-popups/styles/material.css" rel="stylesheet" type="text/css"/>
+
+        <!-- Essential JS 2 Tooltip's global script -->
+        <script src="//cdn.syncfusion.com/ej2/21.2.3/dist/ej2.min.js" type="text/javascript"></script>
+   </head>
+   <body>
+       <!-- Add the HTML span element  -->
+        <div id='container'>
+            <div style="margin: 50px;">
+                <span id='target'>Show Tooltip</span>
+            </div>
+        </div>
+        <script>
+            //Initialize Essential JS 2 JavaScript Tooltip component
+            var tooltip = new ej.popups.Tooltip({
+                width: '150px',
+                height: '40px',
+                content: 'Tooltip with specific width and height'
+            });
+            tooltip.appendTo('#target');
+        </script>
+   </body>
+  </html>
